Change validation structure
This commit applies the changes to validation structure made in
https://github.com/alphagov/digital-marketplace-ssp-content/pull/33 and applies
them across all the content.

--- a/g6/apiType.yml
+++ b/g6/apiType.yml
@@ -1,5 +1,8 @@
 dependsOnLots: 'SaaS, PaaS, IaaS'
 hint: 'Examples of API include RESTful and SOAP.'
 type: text
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'API type'
