--- a/g6/dataExtractionRemoval.yml
+++ b/g6/dataExtractionRemoval.yml
@@ -3,5 +3,8 @@ servicePageLabel: 'Data extraction/removal plan in place'
 assuranceApproach: null
 type: boolean
 filterLabel: 'Data extraction/removal plan in place'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Data extraction/removal plan in place'
