--- a/g6/serviceManagementModel.yml
+++ b/g6/serviceManagementModel.yml
@@ -20,5 +20,8 @@ options:
     -
         label: 'Direct service management'
         filterLabel: 'Direct service management'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Service management model'
