--- a/g6/supportTypes.yml
+++ b/g6/supportTypes.yml
@@ -17,5 +17,8 @@ options:
     -
         label: Onsite
         filterLabel: Onsite
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Support service type'
