--- a/g6/apiAccess.yml
+++ b/g6/apiAccess.yml
@@ -1,5 +1,8 @@
 dependsOnLots: 'SaaS, PaaS, IaaS'
 type: boolean
 filterLabel: 'API access available and supported'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'API access available and supported'
