--- a/g6/dataBackupRecovery.yml
+++ b/g6/dataBackupRecovery.yml
@@ -4,5 +4,8 @@ assuranceApproach: null
 hint: 'You can provide more detail on your disaster recovery plan in your service definition document.'
 type: boolean
 filterLabel: 'Backup, disaster recovery and resilience plan in place'
-validationNotAnswered: 'Please answer if plans for backup, disaster recovery and resilience are in place'
+validations:
+  -
+    name: answer_required
+    message: 'Please answer if plans for backup, disaster recovery and resilience are in place'
 question: 'Backup, disaster recovery and resilience plan in place'
