--- a/g6/dataProtectionBetweenServices.yml
+++ b/g6/dataProtectionBetweenServices.yml
@@ -22,5 +22,8 @@ options:
         filterLabel: 'VPN using legacy SSL or TLS'
     -
         label: 'No encryption'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Data protection between services'
