--- a/g6/dataSecureDeletion.yml
+++ b/g6/dataSecureDeletion.yml
@@ -16,5 +16,8 @@ options:
         filterLabel: 'Other secure erasure process'
     -
         label: 'Other erasure process'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Secure data deletion'
