--- a/g6/datacentreProtectionDisclosure.yml
+++ b/g6/datacentreProtectionDisclosure.yml
@@ -5,5 +5,8 @@ dependsOnLots: 'SaaS, PaaS, IaaS'
 assuranceApproach: 3answers-type1
 type: boolean
 filterLabel: 'Datacentre protection'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Datacentre protection'
