--- a/g6/datacentresSpecifyLocation.yml
+++ b/g6/datacentresSpecifyLocation.yml
@@ -3,5 +3,8 @@ servicePageLabel: 'User-defined data location'
 assuranceApproach: null
 type: boolean
 filterLabel: 'User-defined data location'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'User-defined data location'
