--- a/g6/deprovisioningTime.yml
+++ b/g6/deprovisioningTime.yml
@@ -1,5 +1,8 @@
 dependsOnLots: 'SaaS, PaaS, IaaS'
 hint: ""
 type: text
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Service deprovisioning time'
