--- a/g6/educationPricing.yml
+++ b/g6/educationPricing.yml
@@ -2,5 +2,8 @@ dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
 hint: 'Do you offer special pricing for educational organisations?'
 type: boolean
 filterLabel: 'Education pricing'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Education pricing'
