--- a/g6/incidentEscalation.yml
+++ b/g6/incidentEscalation.yml
@@ -1,5 +1,8 @@
 dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
 type: boolean
 filterLabel: 'Incident escalation process available'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Incident escalation process available'
