--- a/g6/incidentManagementReporting.yml
+++ b/g6/incidentManagementReporting.yml
@@ -5,5 +5,8 @@ dependsOnLots: 'SaaS, PaaS, IaaS'
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Consumer reporting of security incidents'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Consumer reporting of security incidents'
