--- a/g6/managementInterfaceProtection.yml
+++ b/g6/managementInterfaceProtection.yml
@@ -5,5 +5,8 @@ dependsOnLots: 'PaaS, IaaS'
 assuranceApproach: 2answers-type2
 type: boolean
 filterLabel: 'Management interface protection'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Management interface protection'
