--- a/g6/provisioningTime.yml
+++ b/g6/provisioningTime.yml
@@ -1,5 +1,8 @@
 dependsOnLots: 'SaaS, PaaS, IaaS'
 hint: 'How long does it take to get your service up and running? For example 1 to 5 hours, 2 to 3 days.'
 type: text
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Service provisioning time'
