--- a/g6/serviceFeatures.yml
+++ b/g6/serviceFeatures.yml
@@ -4,5 +4,8 @@ dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
 listItemName: 'service feature'
 type: list
 addthing: 'Add another feature'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Service features'
