--- a/g6/serviceSummary.yml
+++ b/g6/serviceSummary.yml
@@ -3,6 +3,9 @@ mockAnswer: 'Professional website development to enhance the delivery and perfor
 dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
 type: textarea
 maxLengthInWords: 50
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Service summary'
 type: textbox_large
