--- a/g6/serviceTypes.yml
+++ b/g6/serviceTypes.yml
@@ -18,5 +18,8 @@ options:
     -
         label: Training
         filterLabel: Training
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Choose the categories that apply to your service'
