--- a/g6/servicesManagementSepartion.yml
+++ b/g6/servicesManagementSepartion.yml
@@ -5,5 +5,8 @@ dependsOnLots: 'SaaS, PaaS, IaaS'
 assuranceApproach: 4answers-type3
 type: boolean
 filterLabel: 'Services management separation'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Services management separation'
