--- a/g6/supportResponseTime.yml
+++ b/g6/supportResponseTime.yml
@@ -1,5 +1,8 @@
 dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
 hint: 'How long will it take until support can begin to be provided? eg 1 hour or 1 business day. (Maximum 20 words.)'
 type: text
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Standard support response times'
