--- a/g6/supportedBrowsers.yml
+++ b/g6/supportedBrowsers.yml
@@ -29,5 +29,8 @@ options:
     -
         label: Opera
         filterLabel: Opera
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Supported web browsers'
