--- a/g6/thirdPartyDataSharingInformation.yml
+++ b/g6/thirdPartyDataSharingInformation.yml
@@ -5,5 +5,8 @@ dependsOnLots: 'SaaS, PaaS, IaaS'
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Visibility of data shared with third-party suppliers'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Visibility of data shared with third-party suppliers'
