--- a/g6/thirdPartyRiskAssessment.yml
+++ b/g6/thirdPartyRiskAssessment.yml
@@ -5,5 +5,8 @@ dependsOnLots: 'SaaS, PaaS, IaaS'
 assuranceApproach: 2answers-type1
 type: boolean
 filterLabel: 'Third-party supplier risk assessment'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'Third-party supplier risk assessment'
