--- a/g6/userAuthenticateSupport.yml
+++ b/g6/userAuthenticateSupport.yml
@@ -5,5 +5,8 @@ dependsOnLots: 'SaaS, PaaS, IaaS'
 assuranceApproach: 2answers-type2
 type: boolean
 filterLabel: 'User access control through support channels'
-validationNotAnswered: 'This question requires an answer.'
+validations:
+  -
+    name: answer_required
+    message: 'This question requires an answer.'
 question: 'User access control through support channels'
