Add extra validations for name/summary

--- a/g6/serviceName.yml
+++ b/g6/serviceName.yml
@@ -6,4 +6,7 @@ validations:
   -
     name: answer_required
     message: 'This question requires an answer.'
+  -
+    name: under_100_characters
+    message: "Your service name can't be more than 100 characters."
 question: 'Service name'
