Add validations for features and benefits

--- a/g6/serviceFeatures.yml
+++ b/g6/serviceFeatures.yml
@@ -8,4 +8,10 @@ validations:
   -
     name: answer_required
     message: 'This question requires an answer.'
+  -
+    name: items_under_10_words_each
+    message: 'Each feature must be less than 10 words'
+  -
+    name: under_10_items
+    message: 'You must have 10 or fewer features'
 question: 'Service features'
