--- a/g6/serviceBenefits.yml
+++ b/g6/serviceBenefits.yml
@@ -7,5 +7,11 @@ addthing: 'Add another business benefit'
 validations:
   -
     name: answer_required
-    message: 'This question requires an answer.'
+    message: 'This question requires an answer'
+  -
+    name: items_under_10_words_each
+    message: 'Each benefit must be less than 10 words'
+  -
+    name: under_10_items
+    message: 'You must have 10 or fewer benefits'
 question: 'Service benefits'
