Be explicit that "on" is a string
pyyaml 'helpfully' converts this
``` yaml
-
  on: Lot
```
to this
``` python
[
  {
    True: "Lot"
  }
]
```

By wrapping `on` in `"`quotes`"` it forces pyyaml to interpret it as a string,
not a boolean, which is our intention.

--- a/g6/auditInformationProvided.yml
+++ b/g6/auditInformationProvided.yml
@@ -3,7 +3,7 @@ filters: 'Consumers are aware of the audit information that will be provided to 
 hint: 'Do you provide audit information to consumers? Choose 1.'
 depends:
   -
-    on: lot
+    "on": lot
     being:
       - SaaS
       - PaaS
