--- a/g6/dataProtectionBetweenUserAndService.yml
+++ b/g6/dataProtectionBetweenUserAndService.yml
@@ -3,7 +3,7 @@ filters: 'Data in transit is protected between the user’s devices and the serv
 hint: 'Choose 1'
 depends:
   -
-    on: lot
+    "on": lot
     being:
       - SaaS
       - PaaS
