--- a/g6/dataSecureDeletion.yml
+++ b/g6/dataSecureDeletion.yml
@@ -3,7 +3,7 @@ filters: 'Consumers should be sufficiently confident that their data is erased w
 hint: 'How do you erase consumer data when resources are moved or re-provisioned, or when the consumer leaves the service, or when they request it to be erased? Choose 1.'
 depends:
   -
-    on: lot
+    "on": lot
     being:
       - SaaS
       - PaaS
