--- a/g6/dataStorageMediaDisposal.yml
+++ b/g6/dataStorageMediaDisposal.yml
@@ -3,7 +3,7 @@ filters: 'Consumers should be sufficiently confident that storage media which ha
 hint: 'How is storage media containing consumer data sanitised or securely destroyed at the end of its usable lifetime? Choose 1.'
 depends:
   -
-    on: lot
+    "on": lot
     being:
       - PaaS
       - IaaS
