--- a/g6/dataSecureEquipmentDisposal.yml
+++ b/g6/dataSecureEquipmentDisposal.yml
@@ -3,7 +3,7 @@ filters: 'Consumers should be sufficiently confident that all equipment potentia
 hint: 'Is all equipment potentially containing consumer data, credentials or configuration information identified at the end of its life or prior to being recycled? Choose 1.'
 depends:
   -
-    on: lot
+    "on": lot
     being:
       - PaaS
       - IaaS
