--- a/g6/incidentDefinitionPublished.yml
+++ b/g6/incidentDefinitionPublished.yml
@@ -2,7 +2,7 @@ requirements: 'Consumers should have confidence that a defined process and conta
 filters: 'Consumers should have confidence that a defined process and contact route exists for reporting of security incidents by consumers and external entities.'
 depends:
   -
-    on: lot
+    "on": lot
     being:
       - SaaS
       - PaaS
