--- a/g6/incidentManagementProcess.yml
+++ b/g6/incidentManagementProcess.yml
@@ -3,7 +3,7 @@ filters: 'Consumers should have confidence that incident management processes ar
 hint: 'Do you have incident management processes in place and are they enacted in response to security incidents?'
 depends:
   -
-    on: lot
+    "on": lot
     being:
       - SaaS
       - PaaS
