--- a/g6/managementInterfaceProtection.yml
+++ b/g6/managementInterfaceProtection.yml
@@ -3,7 +3,7 @@ filters: 'The consumer understands how management interfaces are protected (see 
 hint: 'Do you tell consumers what functionality and protection is available for management interfaces?'
 depends:
   -
-    on: lot
+    "on": lot
     being:
       - PaaS
       - IaaS
