--- a/g6/secureDesign.yml
+++ b/g6/secureDesign.yml
@@ -3,7 +3,7 @@ filters: 'Consumers should be sufficiently confident that development is carried
 hint: 'Is development carried out in line with industry good practice regarding secure design, coding, testing and deployment?'
 depends:
   -
-    on: lot
+    "on": lot
     being:
       - SaaS
       - PaaS
