--- a/g6/serviceAvailabilityPercentage.yml
+++ b/g6/serviceAvailabilityPercentage.yml
@@ -3,7 +3,7 @@ filters: 'Consumers should be sufficiently confident that the availability commi
 hint: 'What is the availability of the service? eg 99.99'
 depends:
   -
-    on: lot
+    "on": lot
     being:
       - SaaS
       - PaaS
