--- a/g6/serviceTypesSCS.yml
+++ b/g6/serviceTypesSCS.yml
@@ -1,6 +1,6 @@
 depends:
   -
-    on: lot
+    "on": lot
     being: SCS
 hint: 'You can choose multiple categories'
 mockAnswer: 'Content management system'
