--- a/g6/serviceTypesSaaS.yml
+++ b/g6/serviceTypesSaaS.yml
@@ -1,6 +1,6 @@
 depends:
   -
-    on: lot
+    "on": lot
     being: SaaS
 hint: 'You can choose multiple categories'
 mockAnswer: Content management system
