--- a/g6/servicesManagementSepartion.yml
+++ b/g6/servicesManagementSepartion.yml
@@ -3,7 +3,7 @@ filters: 'Consumers should have confidence that their management of the service 
 hint: 'Is your management of a consumer’s service kept separate from other consumers?'
 depends:
   -
-    on: lot
+    "on": lot
     being:
       - SaaS
       - PaaS
