--- a/g6/thirdPartyComplianceMonitoring.yml
+++ b/g6/thirdPartyComplianceMonitoring.yml
@@ -3,7 +3,7 @@ filters: 'The consumer understands and accepts how the service provider manages 
 hint: 'Do you manage your third-party suppliers'' compliance with relevant security requirements?'
 depends:
   -
-    on: lot
+    "on": lot
     being:
       - SaaS
       - PaaS
