--- a/g6/thirdPartyDataSharingInformation.yml
+++ b/g6/thirdPartyDataSharingInformation.yml
@@ -3,7 +3,7 @@ filters: 'The consumer understands and accepts how their information is shared w
 hint: 'Do you inform consumers how much of their information is shared with, or accessible by, third-party suppliers and their supply chains?'
 depends:
   -
-    on: lot
+    "on": lot
     being:
       - SaaS
       - PaaS
