--- a/g6/trainingProvided.yml
+++ b/g6/trainingProvided.yml
@@ -3,7 +3,7 @@ filters: 'The consumer can educate those administrating and using the service in
 hint: 'Do you provide user or administrator training on the use of the service and its security?'
 depends:
   -
-    on: lot
+    "on": lot
     being:
       - SaaS
       - PaaS
