--- a/g6/userAuthenticateSupport.yml
+++ b/g6/userAuthenticateSupport.yml
@@ -3,7 +3,7 @@ filters: 'The consumer has sufficient confidence that only authorised individual
 hint: 'Can only authorised individuals from the consumer organisation perform actions affecting the consumer’s service through your support channels?'
 depends:
   -
-    on: lot
+    "on": lot
     being:
       - SaaS
       - PaaS
