Enforce array type for dependencies
We should be strict about this because Python, for example, will let you do
both of these:
```
for lot in "sass paas iaas" …
for lot in ["sass", "paas", "iaas"] …
```
but the behaviour will be subtly different.

--- a/g6/codeLibraryLanguages.yml
+++ b/g6/codeLibraryLanguages.yml
@@ -1,7 +1,8 @@
 depends:
   -
     "on": lot
-    being: SaaS
+    being:
+      - SaaS
 hint: 'Examples of code libraries include AWS Ruby SDK and Stripe-Java. Examples of languages include PHP and Python. (Maximum 10 languages.) (Optional.) '
 listItemName: 'code libraries example'
 type: list
