--- a/g6/apiType.yml
+++ b/g6/apiType.yml
@@ -11,4 +11,10 @@ validations:
   -
     name: answer_required
     message: 'This question requires an answer.'
+  -
+    name: under_20_words
+    message: 'API type must be no more than 20 words.'
+  -
+    name: under_character_limit
+    message: "API type can't be more than 200 characters."
 question: 'API type'
