--- a/g6/provisioningTime.yml
+++ b/g6/provisioningTime.yml
@@ -5,10 +5,16 @@ depends:
       - SaaS
       - PaaS
       - IaaS
-hint: 'How long does it take to get your service up and running? For example 1 to 5 hours, 2 to 3 days.'
+hint: 'How long does it take to get your service up and running? eg 1 to 5 hours or 2 to 3 days. (Maximum 20 words.)'
 type: text
 validations:
   -
     name: answer_required
     message: 'This question requires an answer.'
+  -
+    name: under_20_words
+    message: 'Provisioning time must be no more than 20 words.'
+  -
+    name: under_character_limit
+    message: "Provisioning time can't be more than 200 characters."
 question: 'Service provisioning time'
