--- a/g6/deprovisioningTime.yml
+++ b/g6/deprovisioningTime.yml
@@ -11,4 +11,10 @@ validations:
   -
     name: answer_required
     message: 'This question requires an answer.'
+  -
+    name: under_20_words
+    message: 'Deprovisioning time must be no more than 20 words.'
+  -
+    name: under_character_limit
+    message: "Deprovisioning time can't be more than 200 characters."
 question: 'Service deprovisioning time'
