--- a/g6/serviceSummary.yml
+++ b/g6/serviceSummary.yml
@@ -16,5 +16,8 @@ validations:
   -
     name: under_50_words
     message: 'Your description must not be more than 50 words.'
+  -
+    name: under_character_limit
+    message: "Your description can't be more than 500 characters."
 question: 'Service summary'
 type: textbox_large
