--- a/g6/supportResponseTime.yml
+++ b/g6/supportResponseTime.yml
@@ -12,4 +12,10 @@ validations:
   -
     name: answer_required
     message: 'This question requires an answer.'
+  -
+    name: under_20_words
+    message: 'Support response time must be no more than 20 words.'
+  -
+    name: under_character_limit
+    message: "Support response time can't be more than 200 characters."
 question: 'Standard support response times'
