--- a/g6/vendorCertifications.yml
+++ b/g6/vendorCertifications.yml
@@ -10,4 +10,14 @@ hint: 'Examples of certifications include VMware Certified Professional and Orac
 listItemName: 'certification example'
 type: list
 addthing: 'Add another certification'
+validations:
+    -
+      name: under_10_words
+      message: 'Each certification must be no more than 10 words.'
+    -
+      name: under_10_items
+      message: 'You must have 10 or fewer certifications.'
+    -
+      name: under_character_limit
+      message: 'Each certification must be no more than 100 characters.'
 question: 'Vendor certification(s)'
