--- a/g7_declaration/PR1.yml
+++ b/g7_declaration/PR1.yml
@@ -1,3 +1,3 @@
 id: PR1
-question: We accept the Terms of Participation Attachment 5
+question: You accept the Terms of Participation Attachment 5
 type: boolean
