--- a/g7_declaration/PR4.yml
+++ b/g7_declaration/PR4.yml
@@ -1,3 +1,3 @@
 id: PR4
-question: We understand that to send a message to the CCS procurement team we must ensure that the name of the procurement is in the context field and ‘ALL HOSTS’ is selected in the ‘TO’ box
+question: You understand that you must use the Digital Marketplace supplier app to ask clarification questions about the G-Cloud 7 application process.
 type: boolean
