--- a/g7_declaration/PR5.yml
+++ b/g7_declaration/PR5.yml
@@ -1,3 +1,3 @@
 id: PR5
-question: We have studied the document ‘e-Sourcing Supplier Guidance Part B - Tendering and Further Competitions’
+question: You have read and understood the guidance on how to use the Digital Marketplace supplier app in the Digital Marketplace suppliers' guide https://www.digitalmarketplace.service.gov.uk/g-cloud/suppliers-guide. 
 type: boolean
