--- a/g7_declaration/PR2.yml
+++ b/g7_declaration/PR2.yml
@@ -1,3 +1,3 @@
 id: PR2
-question: You accept the draft terms and conditions as set out in Attachment 4 Framework Agreement and Call Off Contract
+question: Do you accept the draft terms and conditions as set out in Attachment 4 Framework Agreement and Call Off Contract?
 type: boolean
