--- a/g7_declaration/PR3.yml
+++ b/g7_declaration/PR3.yml
@@ -1,3 +1,3 @@
 id: PR2
-question: "You understand that you must complete the supplier declaration and add and submit at least one service before your application to G-Cloud 7 can be considered.   
+question: "Do you understand that you must complete the supplier declaration and add and submit at least one service before your application to G-Cloud 7 can be considered?   
 type: boolean
