--- a/g7_declaration/PR4.yml
+++ b/g7_declaration/PR4.yml
@@ -1,3 +1,3 @@
 id: PR4
-question: You understand that you must use the Digital Marketplace supplier app to ask clarification questions about the G-Cloud 7 application process.
+question: Do you understand that you must use the Digital Marketplace supplier app to ask clarification questions about the G-Cloud 7 application process?
 type: boolean
