--- a/g7_declaration/PR5.yml
+++ b/g7_declaration/PR5.yml
@@ -1,3 +1,3 @@
 id: PR5
-question: You have read and understood the guidance on how to use the Digital Marketplace supplier app in the Digital Marketplace suppliers' guide https://www.digitalmarketplace.service.gov.uk/g-cloud/suppliers-guide. 
+question: Have you read and understood the guidance on how to use the Digital Marketplace supplier app in the Digital Marketplace suppliers' guide https://www.digitalmarketplace.service.gov.uk/g-cloud/suppliers-guide? 
 type: boolean
