--- a/g7_declaration/SQ1-1b.yml
+++ b/g7_declaration/SQ1-1b.yml
@@ -1,2 +1,2 @@
-question: Registered office address (if applicable)
+question: What is the tendering organisation's registered office address?
 type: text
