--- a/g7_declaration/SQ1-1e.yml
+++ b/g7_declaration/SQ1-1e.yml
@@ -1,2 +1,2 @@
-question: Company registration number (if applicable)
+question: What is your organisation's company registration number?
 type: text
