--- a/g7_declaration/SQ1-1f.yml
+++ b/g7_declaration/SQ1-1f.yml
@@ -1,2 +1,2 @@
-question: What is your organsation's charity registration number? 
+question: What is your organisation's charity registration number? 
 type: text
