--- a/g7_declaration/SQ1-1g.yml
+++ b/g7_declaration/SQ1-1g.yml
@@ -1,3 +1,3 @@
-question: What is the DUNS number for your organisastion's head office?
+question: What is the DUNS number for your organisation's head office?
 hint: (Maximum 9 characters.)
 type: text
