--- a/g7_declaration/SQ1-1i-i.yml
+++ b/g7_declaration/SQ1-1i-i.yml
@@ -1,2 +1,3 @@
-question: If applicable, is your business registered with the appropriate professional or trade register(s) in the member state where it is established (as set out in Schedule 5 of the Regulations) under the conditions laid down by that state?
+question: Is your business registered with the appropriate professional or trade register(s) in the EU member state where it's established?
+hint: Visit http://www.legislation.gov.uk/uksi/2015/102/made to check your organisation complies with Schedule 5 of the Public Contracts Regulations 2015 
 type: boolean
