--- a/g7_declaration/SQ1-1i-ii.yml
+++ b/g7_declaration/SQ1-1i-ii.yml
@@ -1,2 +1,3 @@
-question: "If you responded Yes to SQ1.1(i) - (i), please provide, in the following text field, details including the registration number."
+question: "If you selected 'Yes' to SQ1.1(i) - (i), please provide details including your organisation's registration number."
+hint: (Maximum 4096 characters.)
 type: text
