--- a/g7_declaration/SQ1-1j-i.yml
+++ b/g7_declaration/SQ1-1j-i.yml
@@ -1,2 +1,4 @@
-question: "Is it a legal requirement in the state where you are established for you to possess a particular authorisation or be a member of a particular organisation in order to provide the services specified in this procurement? (Guidance Note: include in procurement procedures for services)"
+question: "To provide the services specified in this procurement, is it a legal requirement in the state where you're established to be:
+- licensed?
+- a member of a relevant organisation?"
 type: boolean
