--- a/g7_declaration/SQ1-1b.yml
+++ b/g7_declaration/SQ1-1b.yml
@@ -1,2 +1,2 @@
-question: What is the tendering organisation's registered office address?
+question: What is your organisation's registered office address?
 type: text
