--- a/g7_declaration/SQ1-1k.yml
+++ b/g7_declaration/SQ1-1k.yml
@@ -1,2 +1,2 @@
-question: What is the trading name(s) that will be used if successful in this procurement.
+question: What is the trading name(s) that will be used if successful in this procurement?
 type: text
