--- a/g7_declaration/SQ1-1p-i.yml
+++ b/g7_declaration/SQ1-1p-i.yml
@@ -1,2 +1,2 @@
-question: What is the full name of your immediate parent company
+question: What is the full name of your organisation's immediate parent company (if it has one)?
 type: text
