--- a/g7_declaration/SQ1-1p-iii.yml
+++ b/g7_declaration/SQ1-1p-iii.yml
@@ -1,2 +1,2 @@
-question: Registration number (if applicable)
+question: What is your organisation's registration number (if it has one)?
 type: text
