--- a/g7_declaration/SQ1-1p-iv.yml
+++ b/g7_declaration/SQ1-1p-iv.yml
@@ -1,2 +1,2 @@
-question: Head office DUNS number
+question: What is the DUNS number of your parent organisation's head office (if it has one)?
 type: text
