--- a/g7_declaration/SQ1-1p-ii.yml
+++ b/g7_declaration/SQ1-1p-ii.yml
@@ -1,2 +1,2 @@
-question: What is your parent organisation's registered office address (if it has one)?
+question: What is the registered office address of your parent organisation (if you have one)?
 type: text
